--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,12 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
+
+  <!-- Connection to socket.io server running on localhost. -->
+  <script src="https://cdn.socket.io/socket.io-1.3.4.js"></script>
+  <script>
+    var socket = io('http://localhost:3001');
+  </script>
+
 </body>
 </html>
