--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,25 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="assets/bootstrap-3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/swiper-3.4.2/css/swiper.min.css">
 </head>
 <body>
 
   <app-root>Loading...</app-root>
+
+  <!-- Insert this line above script imports -->
+  <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
+
+  <!-- Jquery library -->
+  <script src="assets/jquery-2.3.1/jquery-3.2.1.js"></script>
+
+  <!-- Application files -->
+  <script src="assets/bootstrap-3.3.7/js/bootstrap.js"></script>
+  <script src="assets/swiper-3.4.2/js/swiper.js"></script>
+
+  <!-- Insert this line after script imports -->
+  <script>if (window.module) module = window.module;</script>
 
 </body>
 </html>
